Set fs.file-max, vm.max_map_count, nproc, nofile
Also a handler to reboot is added in order to activate ulimit
values.

--- a/playbook.yml
+++ b/playbook.yml
@@ -42,6 +42,30 @@
         pip:
           name: docker
 
+      - name: Set vm.max_map_count
+        command: sysctl -w vm.max_map_count=262144
+
+      - name: Set fs.file-max
+        command: sysctl -w fs.file-max=65536
+
+      - name: Set nofile for vagrant user
+        pam_limits:
+          domain: vagrant
+          limit_type: '-'
+          limit_item: nofile
+          value: '65536'
+        notify:
+        - Reboot
+
+      - name: Set nproc for vagrant user
+        pam_limits:
+          domain: vagrant
+          limit_type: '-'
+          limit_item: nproc
+          value: '4096'
+        notify:
+        - Reboot
+
       - name: Container present
         community.docker.docker_container:
           name: sonarqube
@@ -53,3 +77,7 @@
             - sonarqube_data:/opt/sonarqube/data
             - sonarqube_extensions:/opt/sonarqube/extensions 
             - sonarqube_logs:/opt/sonarqube/logs
+
+    handlers:
+      - name: Reboot
+        reboot:
